Temporarily remove tricky prompt
It might be a bug: it looks like JLine impl of Console.readLine
interprets %